--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "ember-resolver": "^7.0.0",
     "ember-sinon-qunit": "^4.0.1",
     "ember-source": "~3.15.0",
+    "ember-test-selectors": "^3.0.0",
     "ember-welcome-page": "^4.0.0",
     "eslint-config-prettier": "^6.9.0",
     "eslint-plugin-ember": "^7.7.1",
